@@ -1,3 +1,4 @@
+	* fixed minor bug in metadata block requester (for magnet links)
 	* fixed race condition in iconv string converter
 	* fixed error handling in torrent_info constructor
 	* fixed bug in torrent_info::remap_files
